@@ -94,11 +94,12 @@ class MeetingLiegeTestingHelpers(PloneMeetingTestingHelpers):
                       'backToPresented',
                       'backToValidated', )}
 
-    WF_STATE_NAME_MAPPINGS = {'itemcreated': 'itemcreated',
-                              'proposed': 'proposed_to_director',
-                              'validated': 'validated',
-                              'presented': 'presented',
-                              'itemfrozen': 'itemfrozen'}
+    WF_ITEM_STATE_NAME_MAPPINGS_1 = {'itemcreated': 'itemcreated',
+                                     'proposed': 'proposed_to_director',
+                                     'validated': 'validated',
+                                     'presented': 'presented',
+                                     'itemfrozen': 'itemfrozen'}
+    WF_ITEM_STATE_NAME_MAPPING_2 = WF_ITEM_STATE_NAME_MAPPINGS_1
 
     # in which state an item must be after an particular meeting transition?
     ITEM_WF_STATE_AFTER_MEETING_TRANSITION = {'publish_decisions': 'accepted',
